fixed time witdth on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,7 +79,7 @@ svg {
 .time {
   display: flex;
   font-family: 'bebas';
-  font-size: 146px;
+  font-size: 116px;
   margin: 30px 0;
   position: relative;
   top: 30px;
@@ -91,17 +91,11 @@ input[type='number'] {
   background: none;
   color: white;
   font-family: 'bebas';
-  font-size: 146px;
-  height: 120px;
+  font-size: 116px;
+  height: 100px;
   width: 130px;
   text-align: center;
   outline: none;
-}
-input[name='mins'] {
-  padding: 0 10px 0 10px;
-}
-input[name='secs'] {
-  padding: 0 10px 0 10px;
 }
 
 input[type='number']:disabled {
